# norfolk-path

./: .gitattributes  .gitignore  CLAUDE.md  PROJECT.md  export_presets.cfg  gdlintrc  project.godot  pyproject.toml
.claude/: settings.json
.dos/: kit-sha
assets/: tileset.tres
briefs/: cove.json
docs/: .gdignore  asset-catalog.md  asset-index.md  asset-sourcing.md  character-skins.md  chris-walkthrough.md  combat-slice.md  demo-polish-plan.md  future-ideas.md  level-design.md  map-rulebook.md  map-visual-audit.md  pack-arrival.md  player-modular-mapping.md  playtest-automation.md  playtest-checklist.md  playtest-findings.md  review-prompt-round3.md  review-round4-bugs.json  review-round4-workplan.md  review-round4.md  roadmap.md  slice-1-plan.md  story-brief-round4.md  story-handoff.md  testing-loop.md  visual-review.md  web-deploy.md  world-brief.md
launcher/: Install-Shortcut.ps1  README.md  play-norfolk-path.ps1
scenes/: appearance_preview.tscn  arrow_projectile.tscn  book_projectile.tscn  boss_irene.tscn  character_creator.tscn  controls_menu.tscn  cutscene_director.tscn  dialogue_box.tscn  enemy_bat.tscn  enemy_bolt.tscn  enemy_bombschroom.tscn  enemy_bowman.tscn  enemy_mage.tscn  enemy_skeleton.tscn  enemy_slime.tscn  enemy_slime_big.tscn  gas_cloud.tscn  how_to_play.tscn  hud.tscn  level.tscn  main.tscn  pause_menu.tscn  player.tscn  player_select.tscn  shop.tscn  win_screen.tscn
scripts/: ambient_animal.gd  appearance_catalog.gd  appearance_renderer.gd  ariana_human_npc.gd  arrow_projectile.gd  audio.gd  barn_int_map.gd  bomb_enemy.gd  boss_irene.gd  (+56 more)
(+134 files in other folders)
